infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: k0niuu/auth
          resources:
            requests:
              memory: '256Mi' # Wymaga tyle pamięci RAM od klastra
              cpu: '0.1' # Wymaga tyle mocy obliczeniowej od klastra
            limits:
              memory: '512Mi' # Maksymalnie tyle pamięci RAM może użyć kontener
              cpu: '0.5' # Maksymalna dostępna ilość mocy obliczeniowej
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
