infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
        - name: auth-mongo
          image: mongo
          resources:
            requests:
              memory: '256Mi' # Wymagana minimalna ilość pamięci RAM
              cpu: '100m' # Wymagana minimalna ilość mocy obliczeniowej
            limits:
              memory: '512Mi' # Maksymalna dostępna ilość pamięci RAM
              cpu: '500m' # Maksymalna dostępna ilość mocy obliczeniowej
---
apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
