infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: k0niuu/client
          resources:
            requests:
              memory: '256Mi' # Wymaga tyle pamięci RAM od klastra
              cpu: '0.1' # Wymaga tyle mocy obliczeniowej od klastra
            limits:
              memory: '512Mi' # Maksymalnie tyle pamięci RAM może użyć kontener
              cpu: '0.5' # Maksymalna dostępna ilość mocy obliczeniowej
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
