infra/k8s/tickets-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
        - name: tickets
          image: k0niuu/tickets
          resources:
            requests:
              memory: '256Mi' # Wymaga tyle pamięci RAM od klastra
              cpu: '0.1' # Wymaga tyle mocy obliczeniowej od klastra
            limits:
              memory: '512Mi' # Maksymalnie tyle pamięci RAM może użyć kontener
              cpu: '0.5' # Maksymalna dostępna ilość mocy obliczeniowej
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
